; ModuleID = '/home/carl/AnghaBench/lz4/programs/extr_bench.c_LZ4_compressInitStreamHC.c'
source_filename = "/home/carl/AnghaBench/lz4/programs/extr_bench.c_LZ4_compressInitStreamHC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.compressionParameters = type { i32, i32, i8*, i8*, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.compressionParameters*)* @LZ4_compressInitStreamHC to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @LZ4_compressInitStreamHC(%struct.compressionParameters* %0) #0 {
  %2 = alloca %struct.compressionParameters*, align 8
  store %struct.compressionParameters* %0, %struct.compressionParameters** %2, align 8
  %3 = load %struct.compressionParameters*, %struct.compressionParameters** %2, align 8
  %4 = getelementptr inbounds %struct.compressionParameters, %struct.compressionParameters* %3, i32 0, i32 5
  store i32* null, i32** %4, align 8
  %5 = load %struct.compressionParameters*, %struct.compressionParameters** %2, align 8
  %6 = getelementptr inbounds %struct.compressionParameters, %struct.compressionParameters* %5, i32 0, i32 4
  store i32* null, i32** %6, align 8
  %7 = call i8* (...) @LZ4_createStreamHC()
  %8 = load %struct.compressionParameters*, %struct.compressionParameters** %2, align 8
  %9 = getelementptr inbounds %struct.compressionParameters, %struct.compressionParameters* %8, i32 0, i32 3
  store i8* %7, i8** %9, align 8
  %10 = call i8* (...) @LZ4_createStreamHC()
  %11 = load %struct.compressionParameters*, %struct.compressionParameters** %2, align 8
  %12 = getelementptr inbounds %struct.compressionParameters, %struct.compressionParameters* %11, i32 0, i32 2
  store i8* %10, i8** %12, align 8
  %13 = load %struct.compressionParameters*, %struct.compressionParameters** %2, align 8
  %14 = getelementptr inbounds %struct.compressionParameters, %struct.compressionParameters* %13, i32 0, i32 2
  %15 = load i8*, i8** %14, align 8
  %16 = load %struct.compressionParameters*, %struct.compressionParameters** %2, align 8
  %17 = getelementptr inbounds %struct.compressionParameters, %struct.compressionParameters* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.compressionParameters*, %struct.compressionParameters** %2, align 8
  %20 = getelementptr inbounds %struct.compressionParameters, %struct.compressionParameters* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @LZ4_loadDictHC(i8* %15, i32 %18, i32 %21)
  ret void
}

declare dso_local i8* @LZ4_createStreamHC(...) #1

declare dso_local i32 @LZ4_loadDictHC(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
